k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-app
  template:
    metadata:
      labels:
        app: task-app
    spec:
      containers:
        - name: task-app
          image: blackdocker01/task-app:latest
          ports:
            - containerPort: 8080
